--- a/Facebook_Scraping.py.ipynb
+++ b/Facebook_Scraping.py.ipynb
@@ -90,14 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "bot = FaceBookBot() # lancer le driver de chrome\n",
     "#saisir ses identifiants de connexion\n",
     "#bot.login(username,password)\n",
-    "#bot.driver.get()"
+    "bot.driver.get(\"https://m.facebook.com/story/graphql_permalink/?graphql_id=UzpfSTYzMjQwOTcyNDgwOjEwMTU2OTExMjgwNTQ3NDgx\")\n",
+    "page = bot.driver.page_source"
    ]
   },
   {
@@ -230,10 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Autre methode pour recuperer les elements d'un post\n",
+    "bot = FaceBookBot() # lancer le driver de chrome\n",
+    "bot.post_ID = \"10156911280547481\"\n",
+    "#print(bot.post_content())\n",
+    "#print(bot.post_shares())\n",
+    "#print(bot.post_likess())"
+   ]
   },
   {
    "cell_type": "code",
