--- a/Facebook_Scraping.py.ipynb
+++ b/Facebook_Scraping.py.ipynb
@@ -240,7 +240,7 @@
     "bot.post_ID = \"10156911280547481\"\n",
     "#print(bot.post_content())\n",
     "#print(bot.post_shares())\n",
-    "#print(bot.post_likess())"
+    "#print(bot.post_likes())"
    ]
   },
   {
