--- a/Facebook_Scraping.py.ipynb
+++ b/Facebook_Scraping.py.ipynb
@@ -30,8 +30,8 @@
     "\n",
     "#Information de connexion\n",
     "payload = {\n",
-    "        'username' : 'Elhadjtest Kaisens',\n",
-    "        'password' : 'teste2020'\n",
+    "        'username' : 'you'r username',\n
+    "        'password' : 'you-r password'\n",
     "    }\n",
     "\n",
     "authentification = \" http://www.facebook.com/login?\"\n",
